<resources>
    <string name="app_name">Beauty Salon App</string>
    <string name="hello">Hello!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="password">Parola</string>
    <string name="register">Înregistrare</string>
    <string name="logout">Deconectare</string>
    <string name="firstName">Nume</string>
    <string name="lastName">Prenume</string>
    <string name="registerNow">Membru nou? Înregistrează-te acum!</string>
    <string name="loginNow">Sunteți deja membru? Log In</string>
    <string name="phoneNumber">Telefon</string>
    <string name="phoneNumber_">Telefon:</string>
    <string name="othersConnection">Sau conectați-vă cu</string>
    <string name="forgotPassword">Aţi uitat parola?</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="others">Others</string>
    <string name="appoiment">Fă-ți o programare</string>
    <string name="history">Istoricul programarilor</string>
    <string name="inspiration">Inspirație</string>
    <string name="home">Acasă</string>
    <string name="profile">Profil</string>
    <string name="my_profile">Profilul meu</string>
    <string name="inbox">Inbox</string>
    <string name="about_us">Despre noi</string>
    <string name="settings">Setări</string>
    <string name="next">Next</string>
    <string name="client_interface">Client</string>
    <string name="salon_owner">Proprietar salon</string>
    <string name="employee_dashboard">Angajat</string>
    <string name="add_an_employee">Adăugați un angajat</string>
    <string name="add_employee">Adăugați angajat</string>
    <string name="createAccount">Creează cont</string>
    <string name="add_salon">Adăugați un salon nou</string>
    <string name="salonName">Numele salonului</string>
    <string name="salonName_">Numele salonului:</string>
    <string name="salonAddress">Adresa salonului</string>
    <string name="salonCity">Oraș</string>
    <string name="salonCity_">Orașul:</string>
    <string name="salonStreet">Strada</string>
    <string name="salonStreet_">Strada:</string>
    <string name="salonPostalCode_">Codul poștal:</string>
    <string name="salonPostalCode">Codul poștal</string>
    <string name="salonDescription">Descriere</string>
    <string name="salonDescription_">Descrierea salonului:</string>
    <string name="startProgram">Ora de deschidere</string>
    <string name="endProgram">Ora de inchidere</string>
    <string name="upload_image">Încărcați o imagine</string>
    <string name="back">Back</string>
    <string name="view_your_salons">Vizualizați-vă saloanele</string>
    <string name="not_add_salon">Nu ați adăugat niciun salon</string>
    <string name="view_services">Vizualizați serviciile</string>
    <string name="add_a_service">Adăugați un serviciu</string>
    <string name="add_service">Adăugați serviciu</string>
    <string name="salon_name">Numele salonului</string>
    <string name="skip">Skip</string>
    <string name="google">Google</string>
    <string name="next_appointments">Următoarele programări</string>
    <string name="client_login_portal">Portal de autentificare client</string>
    <string name="owner_login_portal">Portal de conectare a proprietarului</string>
    <string name="employee_login_portal">Bun venit pe portalul de conectare a angajaților!</string>
    <string name="details_salon">Vă rugăm să furnizați următoarele detalii pentru a adăuga un nou salon:</string>
    <string name="select_your_role">Vă rugăm să vă selectați rolul:</string>
    <string name="details_client">În calitate de client, puteți căuta și rezerva serviciile oferite de saloane, puteți gestiona întâlnirile și puteți explora diverse opțiuni de frumusețe și wellness.</string>
    <string name="details_owner">Dacă dețineți un salon, alegeți această opțiune pentru a vă gestiona afacerea, a urmări programările și a actualiza serviciile și detaliile personalului.</string>
    <string name="details_employee">Lucrezi la un salon? Selectați această opțiune pentru a vă accesa programul de lucru, pentru a gestiona întâlnirile clienților și pentru a rămâne organizat.</string>
    <string name="pay_now">Plătește</string>
    <string name="payment_successful">Plata realizată cu succes!</string>
    <string name="completed_your_payment">Ura! Ați finalizat plata.</string>
    <string name="x">X</string>
    <string-array name="spinner_items_county">
        <item>Selectați un județ</item>
        <item>Alba Iulia</item>
        <item>Arad</item>
        <item>Argeș</item>
        <item>Bacău</item>
        <item>Bihor</item>
        <item>Bistrița-Năsăud</item>
        <item>Botoșani</item>
        <item>Brașov</item>
        <item>Brăila</item>
        <item>București</item>
        <item>Buzău</item>
        <item>Caraș-Severin</item>
        <item>Călărași</item>
        <item>Cluj</item>
        <item>Constanța</item>
        <item>Covasna</item>
        <item>Dâmbovița</item>
        <item>Dolj</item>
        <item>Galați</item>
        <item>Giurgiu</item>
        <item>Gorj</item>
        <item>Harghita</item>
        <item>Hunedoara</item>
        <item>Ialomița</item>
        <item>Iași</item>
        <item>Ilfov</item>
        <item>Maramureș</item>
        <item>Mehedinți</item>
        <item>Mureș</item>
        <item>Neamț</item>
        <item>Olt</item>
        <item>Prahova</item>
        <item>Satu Mare</item>
        <item>Sălaj</item>
        <item>Sibiu</item>
        <item>Suceava</item>
        <item>Teleorman</item>
        <item>Timiș</item>
        <item>Tulcea</item>
        <item>Vaslui</item>
        <item>Vâlcea</item>
        <item>Vrancea</item>
    </string-array>
    <string name="make_up">Make Up</string>
    <string name="hairstyle">Hairstyle</string>
    <string name="hairstyle_">Coafat</string>
    <string name="nails">Nails</string>
    <string name="nails_">Manichiură și Pedichiură</string>
    <string name="eyebrow">Eyebrow styling</string>
    <string name="eyebrow_">Pensat</string>
    <string name="hair_removal">Hair removal</string>
    <string name="hair_removal_">Epilare</string>
    <string name="facialTreatments">Facial treatments</string>
    <string name="facialTreatments_">Tratamente faciale</string>
    <string name="address">Adresă</string>
    <string name="description">Descriere</string>
    <string name="description_">Descriere:</string>
    <string name="view_statistics">Vizualizați statistici</string>
    <string name="thanks">Vă mulțumim pentru rezervarea serviciilor noastre!</string>
    <string name="choose_the_county">Alegeți județul</string>
    <string name="choose_the_employee">Alegeți angajatul preferat</string>
    <string name="choose_your_service">Alegeți serviciul</string>
    <string name="choose_your_department">Alegeți departamentul</string>
    <string name="no_appointments">Nu există programări pentru data selectată.</string>
    <string name="no_appointments_deloc">Nu există programări.</string>
    <string name="customers">Numărul de clienți în fiecare lună</string>
    <string name="serviceName">Numele serviciului</string>
    <string name="serviceName_">Numele serviciului:</string>
    <string name="price">Preț</string>
    <string name="price_">Preț:</string>
    <string name="view_employee">Vizualizați angajații dvs</string>
    <string name="department">Departament:</string>
    <string name="name">Nume:</string>
    <string name="no_employee">Nu sunt angajați adăugați</string>
    <string name="no_salon">Nu sunt adăugate saloane pentru acest județ</string>
    <string name="employee">Angajat</string>
    <string name="employee_">Angajatul:</string>
    <string name="chooseDate">Alegeți data și ora preferată</string>
    <string name="services">Servicii</string>
    <string name="service_added">Serviciile adăugate</string>
    <string name="nivel_pregatire">Nivel pregătire:</string>
    <string name="no_services">Nu ați adăugat încă niciun serviciu</string>
    <string name="client_no_services">Nu sunt adăugate servicii pentru acest salon</string>
    <string name="beauty_app">Beauty Salon App</string>
    <string name="version">Versiunea:</string>
    <string name="help">Dacă întâmpini orice problemă, te rugăm să ne contactezi:</string>
    <string name="about">Aplicația Beauty Salon este o aplicație mobilă concepută pentru a îmbunătăți experiența pasionaților de frumusețe și wellness. Indiferent dacă doriți să rezervați întâlniri, să descoperiți noi tratamente sau să fiți la curent cu cele mai recente tendințe de frumusețe, această aplicație este soluția dvs. unică.</string>
    <string name="version_format">v1.0</string>
    <string name="change_password">Schimbaţi parola</string>
    <string name="enter_email_address">Introdu adresa ta de email:</string>
    <string name="new_password">Parolă nouă:</string>
    <string name="confirm_password">Confirmă parola:</string>
    <string name="confirm_password2">Confirmă parola</string>
    <string name="book_appointment">Rezervați o programare</string>
    <string name="salonCounty">Județ</string>
    <string name="salonCounty_">Județul:</string>
    <string name="durationHours">Durata serviciului in ORE:</string>
    <string name="durationMinutes">Durata serviciului in MINUTE:</string>
    <string name="date">Data programării:</string>
    <string name="hour">Ora programării:</string>
    <string name="salonPay">Aleg să plătesc la salon</string>
    <string name="homeScreen">Reveniţi la ecranul principal.</string>
    <string name="saloanele_mele">Saloanele mele</string>
    <string name="detalii_despre_salonul_ales">Detalii despre salonul ales</string>
    <string name="beauty_app_email">beautysalon@app.com</string>
    <string name="beauty_app_phone">0736.465.424</string>
    <string name="view_calendar">Vizualizare programări</string>
    <string name="salveaz_programarea">Salvează programarea</string>
    <string-array name="spinner_items_department">
        <item>Alege un departament</item>
        <item>Make Up</item>
        <item>Coafat</item>
        <item>Manichiură și Pedichiură</item>
        <item>Pensat</item>
        <item>Epilare</item>
        <item>Tratamente faciale</item>
    </string-array>
    <string-array name="spinner_items_nivel">
        <item>Alege nivel pregatire</item>
        <item>Junior</item>
        <item>Master</item>
        <item>Senior</item>
    </string-array>


</resources>